Fixing UI and using memory state

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="/js/socket.io.slim.js"></script>
   <script src="/js/jquery-2.1.1.min.js"></script>
   <script src="/js/materialize.min.js"></script>
+  <script src="/js/moment.min.js"></script>
 
 	<link type="text/css" rel="stylesheet" href="/css/materialdesignicons.min.css" media="all" />
   <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
@@ -17,31 +18,30 @@
 </head>
 <body>
   <div id="app">
-		<pre>{{ devices }}</pre>
-    <div>
-        <div v-for="device,i in devices" class="widget" :class="device.color">
-            <div class="info name-wrapper">
-                <div v-if="device.name !== ''" class="name">{{device.name}}</div>
-                <div v-if="device.name === ''" class="name">{{device.color}}</div>
-                <div class="timestamp"><i class="mdi mdi-clock"></i> Updated 3 minutes ago<div>
+    <div v-for="device,i in devices" class="widget" :class="device.color">
+        <div class="info name-wrapper">
+            <div v-if="device.name !== ''" class="name">{{ device.name }}</div>
+            <div v-if="device.name === ''" class="name">{{ device.color }}</div>
+            <div class="timestamp"><i class="mdi mdi-clock"></i> Updated {{ timeAgo(device.updated) }}</div>
+        </div>
+        <div class="info gravity-wrapper">
+            <div class="gravity">
+              <i class="mdi" :class="'mdi-trending-'+trendType(device.color)"></i> {{ device.gravity.toFixed(3) }}
             </div>
-            <div class="info gravity-wrapper">
-                <div class="gravity"><i class="mdi mdi-trending-down"></i> {{ device.gravity }}</div>
-                <div class="gravity-stats">-0.002 (-3.04%)</div>
-            </div>
-            <div class="info temperature">
-                <span class='update'><i class="mdi mdi-thermometer"></i> {{ device.temperature }}</span>
-            </div>
-            <div class="info signal">
-                <span class='update'><i class="mdi mdi-signal"></i> {{ device.rssi }}</span>
-            </div>
-            <div class="settings">
-                <a class="waves-effect waves-light dropdown-button" href="#" :data-activates="'settingsDropdown'+i">
-                    <i class="mdi mdi-dots-vertical"></i>
-                </a>
-                <ul :id="'settingsDropdown' + i" class='dropdown-content'>
-                </ul>
-            </div>
+            <div class="gravity-stats">{{ trendDifference(device.color) }} ({{ trendPercentage(device.color) }}%)</div>
+        </div>
+        <div class="info temperature">
+            <span class='update'><i class="mdi mdi-thermometer"></i> {{ device.temperature }}</span>
+        </div>
+        <div class="info signal">
+            <span class='update'><i class="mdi mdi-signal"></i> {{ device.rssi }}</span>
+        </div>
+        <div class="settings">
+            <a class="waves-effect waves-light dropdown-button" href="#" :data-activates="'settingsDropdown'+i">
+                <i class="mdi mdi-dots-vertical"></i>
+            </a>
+            <ul :id="'settingsDropdown' + i" class='dropdown-content'>
+            </ul>
         </div>
     </div>
   </div>
@@ -54,12 +54,31 @@
 				deviceMetrics: {},
         deviceSettings: {},
 				devices: {},
+				metrics: {}
       },
       created: function() {
         socket.on('updated-devices', function(data) {
           this.devices = data.devices;
         }.bind(this));
+        socket.on('updated-metrics', function(data) {
+          this.metrics = data.metrics;
+          console.log(data.metrics);
+        }.bind(this));
       },
+      methods: {
+        timeAgo: function(t) {
+          return moment(t).fromNow();
+        },
+        trendType: function(color) {
+          return this.metrics[color][this.metrics[color].length-1].trend.trend;
+        },
+        trendDifference: function(color) {
+          return this.metrics[color][this.metrics[color].length-1].trend.difference.toFixed(3);
+        },
+        trendPercentage: function(color) {
+          return this.metrics[color][this.metrics[color].length-1].trend.percentage.toFixed(2);
+        },
+      }
     })
   </script>
 </body>
